--- a/roles/pulp_api/tasks/generate_database_fields_key.yml
+++ b/roles/pulp_api/tasks/generate_database_fields_key.yml
@@ -28,7 +28,8 @@
   shell: >-
     set -o pipefail &&
     umask 0077 &&
-    openssl rand -base64 32 > {{ __pulp_db_fields_key_path }}
+    openssl rand -base64 32
+    | tr '+/' '-_' > {{ __pulp_db_fields_key_path }}
   args:
     # Debian defaults to bourne, but it doesn't understand pipefail.
     executable: /bin/bash
